[gd_scene load_steps=4 format=2]

[ext_resource path="res://Effects/Shaders/outline_shader.shader" type="Shader" id=1]
[ext_resource path="res://Structures/Blueprint/Structure/StaticStructure.gd" type="Script" id=2]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/Smooth = false
shader_param/line_thickness = 0.0
shader_param/outline_color = Color( 1, 1, 1, 1 )
shader_param/pixel_size = 1

[node name="StaticStructure" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
[connection signal="input_event" from="InteractArea" to="." method="_on_InteractArea_input_event"]
[connection signal="mouse_entered" from="InteractArea" to="." method="_on_InteractArea_mouse_entered"]
[connection signal="mouse_exited" from="InteractArea" to="." method="_on_InteractArea_mouse_exited"]
